# rust-dlc

./: .clippy.toml  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  tscript.sh
bincode-dlc/: Cargo.toml
bincode-dlc/src/: error.rs  lib.rs
bincode-dlc/src/de/: decoder.rs  impls.rs  mod.rs
bincode-dlc/src/enc/: encoder.rs  impls.rs  mod.rs
bincode-dlc/src/features/: impl_std.rs
bincode-dlc/tests/: derive.rs  test.rs
bitcoin-rpc-provider/: Cargo.toml  Readme.md
bitcoin-rpc-provider/src/: lib.rs
bitcoin-test-utils/: Cargo.toml  Readme.md
bitcoin-test-utils/src/: lib.rs  rpc_helpers.rs
cg-oracle-client/: Cargo.toml  Readme.md
cg-oracle-client/src/: lib.rs
ddk-dlc/: Cargo.toml
ddk-dlc/benches/: Readme.md  benchmarks.rs
ddk-dlc/src/: secp_utils.rs  util.rs
ddk-manager/: CHANGELOG.md  Cargo.toml  Readme.md
ddk-manager/benches/: benchmarks.rs
ddk-manager/src/: chain_monitor.rs  channel_updater.rs  contract_updater.rs  conversion_utils.rs  error.rs  lib.rs  manager.rs  payout_curve.rs  utils.rs
ddk-manager/src/channel/: accepted_channel.rs  mod.rs  offered_channel.rs  party_points.rs  ser.rs  signed_channel.rs
ddk-manager/src/contract/: accepted_contract.rs  contract_info.rs  contract_input.rs  enum_descriptor.rs  mod.rs  numerical_descriptor.rs  offered_contract.rs  ser.rs  signed_contract.rs
ddk-manager/test_inputs/: offer_enum_collateral_not_equal_payout.json  offer_enum_oracle_with_diff_payout.json  offer_numerical_collateral_less_than_payout.json  offer_numerical_invalid_rounding_interval.json
ddk-manager/tests/: channel_execution_tests.rs  manager_execution_tests.rs  test_utils.rs
ddk-messages/: Cargo.toml  Readme.md
ddk-messages/src/: channel.rs  compatibility_tests.rs  lib.rs  oracle_msgs.rs  ser_impls.rs  ser_macros.rs  serde_utils.rs
ddk-messages/src/segmentation/: mod.rs  segment_reader.rs
ddk-messages/src/test_inputs/: accept_msg.json  dlc_fee_test.json  segment_chunk_msg.json  segment_start_msg.json  sign_msg.json
ddk-trie/: CHANGELOG.md  Cargo.toml
ddk-trie/src/: combination_iterator.rs  digit_decomposition.rs  digit_trie.rs  lib.rs  multi_oracle_trie.rs  multi_oracle_trie_with_diff.rs  multi_trie.rs  utils.rs
dlc/: CHANGELOG.md  Cargo.toml  Readme.md
dlc-core/: Cargo.toml
dlc-core/src/: adaptor_sign.rs  adaptor_verify.rs  cets_sign.rs  cets_verify.rs  contract_tools.rs  create_contract.rs  error.rs  lib.rs  renew.rs  settlement.rs  sign_cets.rs  verify_cets.rs  verify_contract.rs
dlc-core/src/mini_dlc_manager/: contract_tools.rs  mod.rs  (+2 more)
dlc-daemon/: Cargo.toml
dlc-daemon/src/: daemon.rs  dlc-updater.rs  lib.rs  payout_curve.rs  serialization.rs
dlc-daemon/tests/: daemon_execution_tests.rs  memory_storage_provider.rs  mock_network_provider.rs  mock_oracle_provider.rs  mock_time.rs
dlc-macros/: Cargo.toml
dlc-macros/src/: lib.rs
dlc-macros/tests/: maybe_async.rs  sync.rs
dlc-manager/: CHANGELOG.md  Cargo.toml  ClosingSubChannel  ConfirmedSubChannel  CounterOnChainClosedSubChannel  FinalizedSubChannel  OnChainClosedSubChannel
dlc-manager/benches/: Readme.md  benchmarks.rs
dlc-manager/src/: chain_monitor.rs  channel_updater.rs  contract_updater.rs  conversion_utils.rs  custom_signer.rs  error.rs  lib.rs  manager.rs  payout_curve.rs  sub_channel_manager.rs  utils.rs
dlc-manager/test_inputs/: Accepted  offer_channel.json  offer_contract.json  offer_contract2.json  offer_enum_collateral_not_equal_payout.json  offer_enum_missing_payout.json  offer_enum_oracle_with_diff_payout.json  offer_numerical_bad_first_payout.json  offer_numerical_bad_last_payout.json  offer_numerical_collateral_less_than_payout.json  offer_numerical_empty_rounding_interval.json  offer_numerical_invalid_rounding_interval.json  offer_numerical_non_continuous.json  offer_ord_invalid_enum_to_offer_count.json  offer_ord_invalid_interval_to_offer.json  offer_ord_out_of_bound_to_offer_ranges.json  offer_ord_overlapping_to_offer.json
dlc-manager/tests/: channel_execution_tests.rs  console_logger.rs  custom_signer.rs  ln_dlc_channel_execution_tests.rs  manager_execution_tests.rs  memory_storage_provider.rs  mock_oracle_provider.rs  mock_time.rs  ord  ordinals_tests.rs  test_utils.rs
dlc-messages/: CHANGELOG.md  Cargo.toml
dlc-messages/src/: channel.rs  compatibility_tests.rs  contract_msgs.rs  lib.rs  message_handler.rs  oracle_msgs.rs  ser_impls.rs  ser_macros.rs  serde_utils.rs  sub_channel.rs  utils.rs
dlc-sled-storage-provider/: Cargo.toml  Readme.md
dlc-sled-storage-provider/src/: lib.rs
dlc-sled-storage-provider/test_files/: Accepted  AcceptedChannel  AcceptedSubChannel  Closed  Confirmed  Confirmed1  Offered  OfferedChannel  OfferedSubChannel  OfferedSubChannel1  PreClosed  Signed  Signed1  SignedChannelEstablished  SignedChannelSettled  SignedSubChannel  sub_channel_actions.json
dlc-trie/: CHANGELOG.md  Cargo.toml  Readme.md
dlc-trie/src/: digit_decomposition.rs  digit_trie.rs  lib.rs  multi_oracle.rs  multi_oracle_trie.rs  multi_oracle_trie_with_diff.rs  multi_trie.rs  test_utils.rs  utils.rs
dlc/benches/: benchmarks.rs
dlc/src/: combination_iterator.rs  digit_decomposition.rs  digit_trie.rs  dlc_trie.rs  dlc_trie_utils.rs  hash_util.rs  ids.rs  lib.rs  multi_oracle.rs  multi_oracle_trie.rs  multi_oracle_trie_with_diff.rs  multi_trie.rs  ord.rs  secp_utils.rs  serde_utils.rs  trie.rs  util.rs
dlc/tests/: execution_tests.rs
dlc/typescript/: base.d.ts  rust-dlc.d.ts
dlc/wasm-generator/: Cargo.toml
electrs-blockchain-provider/: Cargo.toml
electrs-blockchain-provider/src/: lib.rs
mocks/: Cargo.toml  Readme.md
mocks/src/: lib.rs  memory_storage_provider.rs  mock_blockchain.rs  mock_oracle_provider.rs  mock_time.rs  mock_wallet.rs
p2pd-oracle-client/: Cargo.toml  Readme.md
p2pd-oracle-client/src/: lib.rs
sample/: .gitignore  Cargo.toml  Readme.md
sample/src/: cli.rs  disk.rs  hex_utils.rs  main.rs
sample/tests/: cli_tests.rs
simple-wallet/: Cargo.toml  Readme.md
simple-wallet/src/: lib.rs
suredbits-oracle-client/: Cargo.toml
suredbits-oracle-client/src/: lib.rs
(+97 files in other folders)
