[workspace]
members = [
  "bitcoin-test-utils",
  "bitcoin-rpc-provider",
  "p2pd-oracle-client",
  "dlc",
  "dlc-messages",
  "dlc-trie",
  "dlc-manager",
  "mocks",
  "sample",
  "simple-wallet",
  "dlc-sled-storage-provider",
  "electrs-blockchain-provider",
]
resolver = "2"

[patch.crates-io]
lightning = { git = "https://github.com/p2pderivatives/rust-lightning/", rev = "15c4ff6" }
lightning-net-tokio = { git = "https://github.com/p2pderivatives/rust-lightning/", rev = "15c4ff6" }
lightning-persister = { git = "https://github.com/p2pderivatives/rust-lightning/", rev = "15c4ff6" }
