[package]
authors = ["Ty Overby <ty@pre-alpha.com>", "Francesco Mazzoli <f@mazzo.li>", "Zoey Riordan <zoey@dos.cafe>"] 
exclude = ["logo.png", "examples/*", ".gitignore", ".github/"] 
name = "bincode" 
version = "2.0.0-dev" # remember to update html_root_url and bincode_derive

publish = true

categories = ["encoding", "network-programming"]
documentation = "https://docs.rs/bincode"
keywords = ["binary", "encode", "decode", "serialize", "deserialize"]
readme = "./readme.md"
repository = "https://github.com/bincode-org/bincode"

description = "A binary serialization / deserialization strategy for transforming structs into bytes and vice versa!"
license = "MIT"

edition = "2018"

[features]
alloc = []
default = ["std", "derive"]
derive = ["bincode_derive"]
std = ["alloc"]

[dependencies]
bincode_derive = {path = "derive", version = "2.0.0-dev", optional = true}
# serde = { version = "1.0.130", optional = true }
