[package]
authors = ["Crypto Garage"]
edition = '2018'
name = "bitcoin-rpc-provider"
version = "0.1.0"

[dependencies]
bitcoin = {workspace = true}
bitcoincore-rpc = {version = "0.16.0"}
bitcoincore-rpc-json = {version = "0.16.0"}
dlc-manager = {version = "0.3.0", path = "../dlc-manager"}
lightning = {workspace = true}
log = "0.4.14"
rust-bitcoin-coin-selection = {version = "0.1.0", git = "https://github.com/p2pderivatives/rust-bitcoin-coin-selection", features = ["rand"]}
simple-wallet = {path = "../simple-wallet"}
