[package]
authors = ["Crypto Garage", "benny b <ben@bitcoinbay.foundation>"]
description = "Structs and serialization for the Discreet Log Contract (DLC) protocol."
homepage = "https://github.com/bennyhodl/rust-dlc"
license-file = "../LICENSE"
name = "ddk-messages"
repository = "https://github.com/bennyhodl/rust-dlc/tree/master/dlc-messages"
version = "0.7.0"

[features]
default = ["std"]
std = ["ddk-dlc/std", "bitcoin/std", "lightning/std"]
no-std = ["ddk-dlc/no-std", "lightning/no-std"]
use-serde = ["serde", "secp256k1-zkp/serde", "bitcoin/serde"]

[dependencies]
bitcoin = { version = "0.32.2", default-features = false }
ddk-dlc = { version = "0.7.0", path = "../ddk-dlc", default-features = false }
lightning = { version = "0.0.125", default-features = false }
secp256k1-zkp = {version = "0.11.0"}
serde = {version = "1.0", features = ["derive"], optional = true}

[dev-dependencies]
bitcoin = { version = "0.32.2", default-features = false, features = ["serde"] }
ddk-messages = {path = "./", default-features = false, features = ["use-serde"]}
secp256k1-zkp = {version = "0.11.0", features = ["serde", "global-context"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
