[package]
name = "dlc-core"
version = "0.0.1"
edition = "2021"

[dependencies]
bitcoin = { version = "0.29.2", features = ["serde"] }
dlc = { version = "0.4.0", features = ["serde"] }
dlc-manager = { version = "0.4.0", features = ["serde"] }
dlc-messages = { version = "0.4.0", features = ["serde"] }
dlc-trie = { version = "0.4.0", features = ["use-serde"] }
hex = "0.4.3"
log = "0.4.14"
rand_chacha = { version = "0.3.1", optional = true }
secp256k1-zkp = { version = "0.7.0", features = [
    "bitcoin_hashes",
    "rand",
    "rand-std",
    "use-serde",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0.44"
serde_bytes = "0.11.12"

[dev-dependencies]
bitcoincore-rpc = { version = "0.16.0" }
bitcoincore-rpc-json = { version = "0.16.0" }
criterion = "0.4.0"
env_logger = "0.9.1"
secp256k1-zkp = { version = "0.7.0", features = [
    "bitcoin_hashes",
    "rand",
    "rand-std",
    "global-context",
    "use-serde",
] }
serde = "1.0"
serde_json = "1.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
