[package]
name = "dlc-core"
version = "0.0.1"
edition = "2021"

[features]
default = ["std"]
std = [
    "bitcoin/std",
    "dlc/std",
    "dlc-messages/std",
    "dlc-trie/std",
    "dlc-manager/std",
    "secp256k1-zkp/rand-std",
]
use-serde = [
    "serde",
    "bitcoin/serde",
    "dlc/use-serde",
    "dlc-manager/serde",
    "dlc-messages/serde",
    "dlc-trie/use-serde",
]
no-std = [
    "bitcoin/no-std",
    "dlc/no-std",
    "dlc-messages/no-std",
    "dlc-trie/no-std",
]

[dependencies]
bitcoin = { version = "0.29.2", default-features = false }
dlc = { version = "0.4.0", path = "../dlc", default-features = false }
dlc-manager = { version = "0.4.0", path = "../dlc-manager", default-features = false }
dlc-messages = { version = "0.4.0", path = "../dlc-messages", default-features = false }
dlc-trie = { version = "0.4.0", path = "../dlc-trie", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
secp256k1-zkp = { version = "0.7.0" }
thiserror = "1.0.44"
regex = "1.10.3"

[dev-dependencies]
serde = { version = "1.0" }
bitcoincore-rpc = { version = "0.16.0" }
bitcoincore-rpc-json = { version = "0.16.0" }
criterion = "0.4.0"
env_logger = "0.9.1"
secp256k1-zkp = { version = "0.7.0" }
