[package]
name = "dlc-daemon"
version = "0.0.1"
authors = ["Tibo-lg <thibaut@cryptogarage.co.jp>"]
edition = "2018"

[dependencies]
dlc = { version = "0.0.1", path = "../dlc" }
dlc-messages = { version = "0.0.1", path = "../dlc-messages" }
secp256k1 = {version="0.20.1-adaptor.0", git = "https://github.com/p2pderivatives/rust-secp256k1", branch = "ecdsa-adaptor", package="secp256k1", features=["bitcoin_hashes", "rand", "rand-std"]}
bitcoin = {version="0.26.0-adaptor.0", git = "https://github.com/p2pderivatives/rust-bitcoin", branch = "ecdsa-adaptor", package="bitcoin"}
log = "0.4.14"
async-trait = "0.1.50"
lightning = {version="0.0.13-adaptor.0", git = "https://github.com/p2pderivatives/rust-lightning", branch= "ecdsa-adaptor"}

[dev-dependencies]
bitcoin-test-utils = { version="0.0.1", path="../bitcoin-test-utils" }
bitcoin-rpc-provider = { version="0.0.1", path="../bitcoin-rpc-provider" }
bitcoincore-rpc = {version="0.13.0-adaptor.0", git = "https://github.com/p2pderivatives/rust-bitcoincore-rpc", branch = "ecdsa-adaptor"}
bitcoincore-rpc-json = {version="0.13.0-adaptor.0", git = "https://github.com/p2pderivatives/rust-bitcoincore-rpc", branch = "ecdsa-adaptor"}
env_logger = "0.8.4"
