[package]
authors = ["Crypto Garage"]
description = "Creation and handling of Discrete Log Contracts (DLC)."
edition = "2018"
homepage = "https://github.com/p2pderivatives/rust-dlc"
license-file = "../LICENSE"
name = "dlc-manager"
repository = "https://github.com/p2pderivatives/rust-dlc/tree/master/dlc-manager"
version = "0.1.0"

[features]
fuzztarget = ["rand_chacha", "bitcoin/fuzztarget"]
parallel = ["dlc-trie/parallel"]
use-serde = ["serde", "dlc/use-serde", "dlc-messages/serde", "dlc-trie/use-serde"]

[dependencies]
async-trait = "0.1.50"
bitcoin = {version = "0.27"}
dlc = {version = "0.1.0", path = "../dlc"}
dlc-messages = {version = "0.1.0", path = "../dlc-messages"}
dlc-trie = {version = "0.1.0", path = "../dlc-trie"}
lightning = {version = "0.0.106"}
log = "0.4.14"
rand_chacha = {version = "0.3.1", optional = true}
secp256k1-zkp = {version = "0.5.0", features = ["bitcoin_hashes", "rand", "rand-std"]}
serde = {version = "1.0", optional = true}

[dev-dependencies]
bitcoin-rpc-provider = {path = "../bitcoin-rpc-provider"}
bitcoin-test-utils = {path = "../bitcoin-test-utils"}
bitcoincore-rpc = {version = "0.13.0", git = "https://github.com/p2pderivatives/rust-bitcoincore-rpc", branch = "dlc-version"}
bitcoincore-rpc-json = {version = "0.13.0", git = "https://github.com/p2pderivatives/rust-bitcoincore-rpc", branch = "dlc-version"}
criterion = "0.3"
dlc-manager = {path = ".", features = ["use-serde"]}
dlc-messages = {path = "../dlc-messages", features = ["serde"]}
env_logger = "0.8.4"
mocks = {path = "../mocks"}
secp256k1-zkp = {version = "0.5.0", features = ["bitcoin_hashes", "rand", "rand-std", "global-context", "use-serde"]}
serde = "1.0"
serde_json = "1.0"

[[bench]]
harness = false
name = "benchmarks"
