[package]
authors = ["Crypto Garage"]
description = "Structs and serialization for the Discreet Log Contract (DLC) protocol."
homepage = "https://github.com/p2pderivatives/rust-dlc"
license-file = "../LICENSE"
name = "dlc-messages"
repository = "https://github.com/p2pderivatives/rust-dlc/tree/master/dlc-messages"
version = "0.4.0"

[features]
default = ["std"]
std = ["dlc/std", "bitcoin/std", "lightning/std"]
no-std = ["bitcoin/no-std", "dlc/no-std", "lightning/no-std"]
use-serde = ["serde", "secp256k1-zkp/use-serde"]

[dependencies]
bitcoin = { version = "0.29.2", default-features = false }
dlc = { version = "0.4.0", path = "../dlc", default-features = false }
lightning = { version = "0.0.118", default-features = false }
secp256k1-zkp = {version = "0.7.0"}
serde = {version = "1.0", features = ["derive"], optional = true}

[dev-dependencies]
bitcoin = { version = "0.29.2", default-features = false, features = ["serde"] }
dlc-messages = {path = "./", default-features = false, features = ["use-serde"]}
secp256k1-zkp = {version = "0.7.0", features = ["use-serde", "global-context"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
