[package]
authors = ["Crypto Garage"]
description = "Sled backend for persisting Discreet Log Contracts (DLC)."
edition = "2018"
homepage = "https://github.com/p2pderivatives/rust-dlc"
license-file = "../LICENSE"
name = "dlc-sled-storage-provider"
repository = "https://github.com/p2pderivatives/rust-dlc/tree/master/dlc-sled-storage-provider"
version = "0.1.0"

[features]
wallet = ["bitcoin", "secp256k1-zkp", "simple-wallet", "lightning"]

[dependencies]
bitcoin = {version = "0.31.2", optional = true}
dlc-manager = {path = "../dlc-manager"}
# lightning = {version = "0.0.123", optional = true}
lightning = { git = "https://github.com/lightningdevkit/rust-lightning", branch = "main", default-features = false, optional = true }
secp256k1-zkp = {version = "0.10.1", optional = true}
simple-wallet = {path = "../simple-wallet", optional = true}
sled = "0.34"
