[package]
authors = ["Crypto Garage"]
description = "Sled backend for persisting Discreet Log Contracts (DLC)."
edition = "2018"
homepage = "https://github.com/p2pderivatives/rust-dlc"
license-file = "../LICENSE"
name = "dlc-sled-storage-provider"
repository = "https://github.com/p2pderivatives/rust-dlc/tree/master/dlc-sled-storage-provider"
version = "0.1.0"

[features]
wallet = ["bitcoin", "secp256k1-zkp", "simple-wallet"]

[dependencies]
bitcoin = {version = "0.32.2", optional = true}
ddk-manager = {path = "../ddk-manager"}
lightning = "0.0.125"
secp256k1-zkp = {version = "0.11.0", optional = true}
simple-wallet = {path = "../simple-wallet", optional = true}
sled = "0.34"
