[package]
authors = ["Crypto Garage"]
description = "Data structures for storage and retrival of numerical Discreet Log Contracts (DLC)."
homepage = "https://github.com/p2pderivatives/rust-dlc"
license-file = "../LICENSE"
name = "dlc-trie"
repository = "https://github.com/p2pderivatives/rust-dlc/tree/master/dlc-trie"
version = "0.3.0"

[features]
parallel = ["rayon"]
use-serde = ["serde", "dlc/use-serde"]

[dependencies]
bitcoin = {workspace = true}
dlc = {version = "0.3.0", path = "../dlc"}
rayon = {version = "1.5", optional = true}
secp256k1-zkp = {workspace = true}
serde = {version = "1.0", optional = true, default_features = false, features = ["derive"]}
