[package]
authors = ["Crypto Garage"]
description = "Creation, signing and verification of Discreet Log Contracts (DLC) transactions."
homepage = "https://github.com/p2pderivatives/rust-dlc"
license-file = "../LICENSE"
name = "dlc"
repository = "https://github.com/p2pderivatives/rust-dlc/tree/master/dlc"
version = "0.4.0"

[dependencies]
bitcoin = { version = "0.29.2", default-features = false }
hashbrown = { version = "0.11.2", optional = true }
miniscript = { version = "9.0.2", default-features = false }
secp256k1-sys = { version = "0.6.1" }
secp256k1-zkp = { version = "0.7.0" }
serde = { version = "1.0", default-features = false, optional = true }

[features]
# for benchmarks
unstable = []
default = ["std"]
std = ["bitcoin/std", "miniscript/std"]
no-std = ["dep:hashbrown", "miniscript/no-std", "bitcoin/no-std"]
use-serde = ["serde", "secp256k1-zkp/use-serde"]

[dev-dependencies]
bitcoin-test-utils = { path = "../bitcoin-test-utils" }
bitcoincore-rpc = { version = "0.16.0" }
bitcoincore-rpc-json = { version = "0.16.0" }
rayon = "1.5"
secp256k1-zkp = { version = "0.7.0", features = ["bitcoin_hashes", "rand","serde", "global-context"] }
