[package]
edition = "2021"
name = "electrs-blockchain-provider"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = {version = "0.29"}
bitcoin-test-utils = {path = "../bitcoin-test-utils"}
dlc-manager = {path = "../dlc-manager"}
lightning = {version = "0.0.116"}
lightning-block-sync = {version = "0.0.116"}
reqwest = {version = "0.11", features = ["blocking", "json"]}
rust-bitcoin-coin-selection = { version = "0.1.0", git = "https://github.com/p2pderivatives/rust-bitcoin-coin-selection", rev = "405451929568422f7df809e35d6ad8f36fccce90", features = ["rand"] }
serde = {version = "*", features = ["derive"]}
simple-wallet = {path = "../simple-wallet"}
tokio = "1"
