[package]
edition = "2021"
name = "electrs-blockchain-provider"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.83"
bitcoin = {version = "0.32.2"}
bitcoin-test-utils = {path = "../bitcoin-test-utils"}
ddk-manager = {path = "../ddk-manager"}
lightning = {version = "0.0.125"}
lightning-block-sync = {version = "0.0.125"}
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "*", features = ["derive"]}
simple-wallet = {path = "../simple-wallet"}
tokio = "1"
