[package]
authors = ["Crypto Garage"]
edition = "2018"
name = "mocks"
version = "0.1.0"

[features]
async = ["dep:async-trait", "dlc-manager/async"]

[dependencies]
async-trait = { version = "0.1.83", optional = true }
bdk-macros = "0.6.0"
bitcoin = "0.32.2"
dlc = {path = "../dlc"}
dlc-manager = {path = "../dlc-manager"}
dlc-messages = {path = "../dlc-messages"}
lightning = {version = "0.0.125"}
secp256k1-zkp = {version = "0.11.0", features = ["hashes", "global-context", "rand", "rand-std"]}
simple-wallet = {path = "../simple-wallet"}
