[package]
authors = ["Crypto Garage"]
description = "Oracle interface implementation for the p2pderivatives oracle."
homepage = "https://github.com/p2pderivatives/rust-dlc"
license-file = "../LICENSE"
name = "p2pd-oracle-client"
repository = "https://github.com/p2pderivatives/rust-dlc/tree/master/p2pd-oracle-client"
version = "0.1.0"

[dependencies]
bitcoin = "0.30.2"
chrono = {version = "0.4.19", features = ["serde"]}
dlc-manager = {path = "../dlc-manager"}
dlc-messages = {path = "../dlc-messages", features = ["use-serde"]}
reqwest = {version = "0.11", features = ["blocking", "json"]}
serde = {version = "*", features = ["derive"]}

[dev-dependencies]
mockito = "0.31.0"
