[package]
authors = ["Crypto Garage"]
edition = "2018"
name = "sample"
version = "0.1.0"

[dependencies]
bitcoin = {version = "0.27"}
bitcoin-rpc-provider = {path = "../bitcoin-rpc-provider"}
dlc = {path = "../dlc", features = ["use-serde"]}
dlc-manager = {path = "../dlc-manager", features = ["use-serde", "parallel"]}
dlc-messages = {path = "../dlc-messages"}
dlc-sled-storage-provider = {path = "../dlc-sled-storage-provider"}
futures = "0.3"
lightning = {version = "0.0.106"}
lightning-net-tokio = {version = "0.0.106"}
p2pd-oracle-client = {path = "../p2pd-oracle-client"}
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
time = "0.2"
tokio = {version = "1.5", features = ["io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time"]}
