[package]
edition = "2018"
name = "simple-wallet"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.30"
dlc = {path = "../dlc"}
dlc-manager = {path = "../dlc-manager"}
lightning = {version = "0.0.121"}
bdk = {version = "0.29.0"}
secp256k1-zkp = {version = "0.9.2"}

[dev-dependencies]
mocks = {path = "../mocks"}
secp256k1-zkp = {version = "0.9.2", features = ["global-context"]}
